Remove errant comma in template

--- a/templates/login.html
+++ b/templates/login.html
@@ -78,7 +78,7 @@
     filters="jsmin",
     output="packed-app.js",
     "js/jQuery-Notify-bar/jquery.notifyBar.js",
-    "js/login.js",
+    "js/login.js"
   %}
     <script src="{{ ASSET_URL }}"></script>
   {% endassets %}
